@@ -1,27 +1,38 @@
 /**
- * Copyright (C) 2000 - 2011 Silverpeas
+ * Copyright (C) 2000 - 2013 Silverpeas
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU Affero General Public License as published by the Free Software Foundation, either version 3
+ * of the License, or (at your option) any later version.
  *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have recieved a copy of the text describing
- * the FLOSS exception, and it is also available here:
- * "http://repository.silverpeas.com/legal/licensing"
+ * As a special exception to the terms and conditions of version 3.0 of the GPL, you may
+ * redistribute this Program in connection with Free/Libre Open Source Software ("FLOSS")
+ * applications as described in Silverpeas's FLOSS exception. You should have recieved a copy of the
+ * text describing the FLOSS exception, and it is also available here:
+ * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
+ * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Affero General Public License for more details.
  *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Affero General Public License along with this program.
+ * If not, see <http://www.gnu.org/licenses/>.
  */
 package com.stratelia.webactiv.forums.forumsManager.ejb;
+
+import com.silverpeas.util.StringUtil;
+import com.stratelia.silverpeas.silvertrace.SilverTrace;
+import com.stratelia.webactiv.forums.forumsException.ForumsRuntimeException;
+import com.stratelia.webactiv.forums.models.Forum;
+import com.stratelia.webactiv.forums.models.ForumDetail;
+import com.stratelia.webactiv.forums.models.ForumPK;
+import com.stratelia.webactiv.forums.models.Message;
+import com.stratelia.webactiv.forums.models.MessagePK;
+import com.stratelia.webactiv.forums.models.Moderator;
+import com.stratelia.webactiv.util.DBUtil;
+import com.stratelia.webactiv.util.DateUtil;
+import com.stratelia.webactiv.util.exception.SilverpeasRuntimeException;
+import com.stratelia.webactiv.util.exception.UtilException;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -37,19 +48,6 @@ import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Vector;
-
-import com.silverpeas.util.StringUtil;
-import com.stratelia.silverpeas.silvertrace.SilverTrace;
-import com.stratelia.webactiv.forums.models.ForumDetail;
-import com.stratelia.webactiv.forums.models.ForumPK;
-import com.stratelia.webactiv.forums.forumsException.ForumsRuntimeException;
-import com.stratelia.webactiv.forums.models.MessagePK;
-import com.stratelia.webactiv.forums.models.Forum;
-import com.stratelia.webactiv.forums.models.Message;
-import com.stratelia.webactiv.util.DBUtil;
-import com.stratelia.webactiv.util.DateUtil;
-import com.stratelia.webactiv.util.exception.SilverpeasRuntimeException;
-import com.stratelia.webactiv.util.exception.UtilException;
 
 /**
  * Class managing database accesses for forums.
@@ -67,7 +65,6 @@ public class ForumsDAO {
   private static final String FORUM_COLUMN_FORUM_CREATION_DATE = "forumCreationDate";
   private static final String FORUM_COLUMN_FORUM_CREATOR = "forumCreator";
   private static final String FORUM_COLUMN_FORUM_LOCK_LEVEL = "forumLockLevel";
-  private static final String FORUM_COLUMN_FORUM_CLOSE_DATE = "forumCloseDate";
   private static final String FORUM_COLUMNS = FORUM_COLUMN_FORUM_ID + ", "
       + FORUM_COLUMN_FORUM_NAME + ", " + FORUM_COLUMN_FORUM_DESCRIPTION + ", "
       + FORUM_COLUMN_FORUM_ACTIVE + ", " + FORUM_COLUMN_FORUM_PARENT + ", "
@@ -88,12 +85,6 @@ public class ForumsDAO {
       + ", " + MESSAGE_COLUMN_FORUM_ID + ", "
       + MESSAGE_COLUMN_MESSAGE_PARENT_ID + ", " + MESSAGE_COLUMN_MESSAGE_DATE + " , "
       + MESSAGE_COLUMN_STATUS;
-  // Subscriptions table.
-  private static final String SUBSCRIPTION_TABLE = "SC_Forums_Subscription";
-  private static final String SUBSCRIPTION_COLUMN_USER_ID = "userId";
-  private static final String SUBSCRIPTION_COLUMN_MESSAGE_ID = "messageId";
-  private static final String SUBSCRIPTION_COLUMNS = SUBSCRIPTION_COLUMN_USER_ID
-      + ", " + SUBSCRIPTION_COLUMN_MESSAGE_ID;
   // Rights table.
   private static final String RIGHTS_TABLE = "SC_Forums_Rights";
   private static final String RIGHTS_COLUMN_USER_ID = "userId";
@@ -140,11 +131,6 @@ public class ForumsDAO {
       + FORUM_COLUMNS + ") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)";
   private static final String QUERY_UPDATE_FORUM = "UPDATE sc_forums_forum SET forumName = ?, "
       + "forumDescription = ?, forumParent = ?, instanceId = ?, categoryId = ? WHERE forumId = ? ";
-  private static final String QUERY_DELETE_FORUM_SUBSCRIPTION = "DELETE FROM "
-      + SUBSCRIPTION_TABLE + " WHERE " + SUBSCRIPTION_COLUMN_MESSAGE_ID
-      + " IN (SELECT DISTINCT CAST(" + MESSAGE_COLUMN_MESSAGE_ID
-      + " AS VARCHAR(255))" + " FROM " + MESSAGE_TABLE + " WHERE "
-      + MESSAGE_COLUMN_FORUM_ID + " = ?)";
   private static final String QUERY_DELETE_FORUM_RIGHTS = "DELETE FROM "
       + RIGHTS_TABLE + " WHERE " + RIGHTS_COLUMN_FORUM_ID + " = ?";
   private static final String QUERY_DELETE_FORUM_MESSAGE = "DELETE FROM "
@@ -260,12 +246,12 @@ public class ForumsDAO {
    * @return The list of forums corresponding to the primary key (Forum).
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<Forum> getForumsList(Connection con, ForumPK forumPK)
+  public static List<Forum> getForumsList(Connection con, ForumPK forumPK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumsList()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + QUERY_GET_FORUMS_LIST);
 
-    ArrayList<Forum> forums = new ArrayList<Forum>();
+    List<Forum> forums = new ArrayList<Forum>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -315,7 +301,7 @@ public class ForumsDAO {
    * @return The list of forums corresponding to the primary key and the category id.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<Forum> getForumsListByCategory(Connection con,
+  public static List<Forum> getForumsListByCategory(Connection con,
       ForumPK forumPK, String categoryId) throws SQLException {
     String selectQuery =
         (StringUtil.isDefined(categoryId)
@@ -326,7 +312,7 @@ public class ForumsDAO {
     SilverTrace.info("forums", "ForumsDAO.getForumsListByCategory()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + selectQuery);
 
-    ArrayList<Forum> forums = new ArrayList<Forum>();
+    List<Forum> forums = new ArrayList<Forum>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -351,12 +337,12 @@ public class ForumsDAO {
    * @return The list of ids of forums which parent is the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getForumSonsIds(Connection con, ForumPK forumPK)
+  public static List<String> getForumSonsIds(Connection con, ForumPK forumPK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumSonsIds()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + QUERY_GET_FORUM_SONS);
 
-    ArrayList<String> forumIds = new ArrayList<String>();
+    List<String> forumIds = new ArrayList<String>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -539,6 +525,7 @@ public class ForumsDAO {
 
   /**
    * Locks the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param level The lock level.
@@ -565,6 +552,7 @@ public class ForumsDAO {
 
   /**
    * Unlocks the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param level The lock level.
@@ -609,6 +597,7 @@ public class ForumsDAO {
 
   /**
    * Creates a forum.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param forumName The name of the forum.
@@ -654,6 +643,7 @@ public class ForumsDAO {
 
   /**
    * Updates the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param forumName The name of the forum.
@@ -689,6 +679,7 @@ public class ForumsDAO {
 
   /**
    * Deletes the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @throws SQLException An SQL exception.
@@ -701,10 +692,7 @@ public class ForumsDAO {
     try {
       SilverTrace.info("forums", "ForumsDAO.deleteForum()",
           "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-          + QUERY_DELETE_FORUM_SUBSCRIPTION);
-      deleteStmt = con.prepareStatement(QUERY_DELETE_FORUM_SUBSCRIPTION);
-      deleteStmt.setInt(1, forumId);
-      deleteStmt.executeUpdate();
+          + QUERY_DELETE_FORUM_FORUM);
 
       deleteStmt = con.prepareStatement(QUERY_DELETE_FORUM_RIGHTS);
       deleteStmt.setString(1, sForumId);
@@ -773,7 +761,7 @@ public class ForumsDAO {
    * parent message corresponds to the message id (if it is valued).
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getMessagesIds(Connection con, ForumPK forumPK,
+  public static List<String> getMessagesIds(Connection con, ForumPK forumPK,
       int messageParentId) throws SQLException {
     String query = (messageParentId != -1 ? QUERY_GET_MESSAGES_IDS_BY_FORUM_AND_MESSAGE
         : QUERY_GET_MESSAGES_IDS_BY_FORUM);
@@ -805,7 +793,7 @@ public class ForumsDAO {
    * @return The list of ids of messages of the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getMessagesIds(Connection con, ForumPK forumPK)
+  public static List<String> getMessagesIds(Connection con, ForumPK forumPK)
       throws SQLException {
     return getMessagesIds(con, forumPK, -1);
   }
@@ -816,7 +804,7 @@ public class ForumsDAO {
    * @return The list of ids of threads of the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getSubjectsIds(Connection con, ForumPK forumPK)
+  public static List<String> getSubjectsIds(Connection con, ForumPK forumPK)
       throws SQLException {
     return getMessagesIds(con, forumPK, 0);
   }
@@ -921,7 +909,7 @@ public class ForumsDAO {
       prepStmt.setString(3, status);
       rs = prepStmt.executeQuery();
       while (rs.next()) {
-        nextMessageIds.add(new Integer(rs.getInt(MESSAGE_COLUMN_MESSAGE_ID)));
+        nextMessageIds.add(Integer.valueOf(rs.getInt(MESSAGE_COLUMN_MESSAGE_ID)));
       }
     } catch (SQLException sqle) {
       return 0;
@@ -1138,7 +1126,7 @@ public class ForumsDAO {
       selectStmt.setString(1, instanceId);
       rs = selectStmt.executeQuery();
       while (rs.next()) {
-        forumIds.add(new Integer(rs.getInt(1)));
+        forumIds.add(Integer.valueOf(rs.getInt(1)));
       }
     } finally {
       DBUtil.close(rs, selectStmt);
@@ -1259,7 +1247,7 @@ public class ForumsDAO {
    * @return The message corresponding to the primary key (Vector).
    * @throws SQLException An SQL exception.
    */
-  public static Vector getMessageInfos(Connection con, MessagePK messagePK)
+  public static List getMessageInfos(Connection con, MessagePK messagePK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessageInfos()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
@@ -1410,6 +1398,7 @@ public class ForumsDAO {
 
   /**
    * Creates a message.
+   *
    * @param con The connection to the database.
    * @param messageTitle The title of the message.
    * @param messageAuthor The author of the message.
@@ -1462,6 +1451,7 @@ public class ForumsDAO {
 
   /**
    * Updates the message corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param messagePK The primary key of the message.
    * @param title The title of the message.
@@ -1485,14 +1475,10 @@ public class ForumsDAO {
   }
   private static final String QUERY_DELETE_MESSAGE_MESSAGE = "DELETE FROM "
       + MESSAGE_TABLE + " WHERE " + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
-  private static final String QUERY_DELETE_MESSAGE_SUBSCRIPTION = "DELETE FROM "
-      + SUBSCRIPTION_TABLE
-      + " WHERE "
-      + SUBSCRIPTION_COLUMN_MESSAGE_ID
-      + " = ?";
 
   /**
    * Deletes the message corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param messagePK The primary key of the message.
    * @throws SQLException An SQL exception.
@@ -1507,10 +1493,6 @@ public class ForumsDAO {
     try {
       deleteStmt = con.prepareStatement(QUERY_DELETE_MESSAGE_MESSAGE);
       deleteStmt.setInt(1, Integer.parseInt(messagePK.getId()));
-      deleteStmt.executeUpdate();
-
-      deleteStmt = con.prepareStatement(QUERY_DELETE_MESSAGE_SUBSCRIPTION);
-      deleteStmt.setString(1, messagePK.getId());
       deleteStmt.executeUpdate();
     } finally {
       DBUtil.close(deleteStmt);
@@ -1527,12 +1509,11 @@ public class ForumsDAO {
    * primary key.
    * @throws SQLException An SQL exception.
    */
-  public static Vector getMessageSons(Connection con, MessagePK messagePK)
+  public static Collection<String> getMessageSons(Connection con, MessagePK messagePK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessageSons()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = " + QUERY_GET_MESSAGE_SONS);
-
-    Vector messagesIds = new Vector();
+    Collection<String> messagesIds = new ArrayList<String>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -1587,6 +1568,7 @@ public class ForumsDAO {
 
   /**
    * Adds the role of moderator to the user on the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param userId The user's id.
@@ -1613,6 +1595,7 @@ public class ForumsDAO {
 
   /**
    * Removes the role of moderator to the user on the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @param userId The user's id.
@@ -1638,6 +1621,7 @@ public class ForumsDAO {
 
   /**
    * Removes the role of moderator to all users on the forum corresponding to the primary key.
+   *
    * @param con The connection to the database.
    * @param forumPK The primary key of the forum.
    * @throws SQLException An SQL exception.
@@ -1661,14 +1645,12 @@ public class ForumsDAO {
       + RIGHTS_COLUMNS + " FROM " + RIGHTS_TABLE + " WHERE "
       + RIGHTS_COLUMN_FORUM_ID + " = ?";
 
-  public static List<String> getModerators(Connection con, int forumId)
-      throws SQLException {
+  public static List<Moderator> getModerators(Connection con, int forumId) throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getModerators()",
         "root.MSG_GEN_PARAM_VALUE", "query  = "
         + QUERY_GET_MODERATORS);
 
-    List<String> moderators = new ArrayList<String>();
-    String userId = "";
+    List<Moderator> moderators = new ArrayList<Moderator>();
     PreparedStatement stmt = null;
     ResultSet rs = null;
     try {
@@ -1676,11 +1658,11 @@ public class ForumsDAO {
       stmt.setString(1, Integer.toString(forumId));
       rs = stmt.executeQuery();
       while (rs.next()) {
-        userId = rs.getString(RIGHTS_COLUMN_USER_ID);
-        moderators.add(userId);
+        moderators.add(Moderator.from(rs.getString(RIGHTS_COLUMN_USER_ID),
+            Integer.valueOf(rs.getString(RIGHTS_COLUMN_FORUM_ID))));
       }
     } finally {
-      DBUtil.close(stmt);
+      DBUtil.close(rs, stmt);
     }
     return moderators;
   }
@@ -1691,6 +1673,7 @@ public class ForumsDAO {
   /**
    * Moves the message corresponding to the message primary key from a previous forum to the one
    * corresponding to the forum primary key.
+   *
    * @param con The connection to the database.
    * @param messagePK The primary key of the message.
    * @param forumPK The primary key of the forum.
@@ -1719,156 +1702,16 @@ public class ForumsDAO {
    * key.
    * @throws SQLException An SQL exception.
    */
-  public static Vector getAllMessageSons(Connection con, MessagePK messagePK)
+  public static Collection<String> getAllMessageSons(Connection con, MessagePK messagePK)
       throws SQLException {
-    Vector messagesIds = new Vector();
-    Vector currentMessagesIds = getMessageSons(con, messagePK);
-    String messageId;
-    for (int i = 0; i < currentMessagesIds.size(); i++) {
-      messageId = (String) currentMessagesIds.elementAt(i);
+    Collection<String> messagesIds = new ArrayList<String>();
+    Collection<String> currentMessagesIds = getMessageSons(con, messagePK);
+    for (String messageId : currentMessagesIds) {
       messagesIds.add(messageId);
-      messagesIds.addAll(getAllMessageSons(con, new MessagePK(messagePK.getInstanceId(), messageId)));
+      messagesIds.addAll(getAllMessageSons(con, new MessagePK(messagePK.getInstanceId(), 
+          messageId)));
     }
     return messagesIds;
-  }
-  private static final String QUERY_SUBSCRIBE_MESSAGE = "INSERT INTO "
-      + SUBSCRIPTION_TABLE + " (" + SUBSCRIPTION_COLUMNS + ")"
-      + " VALUES (?, ?)";
-
-  /**
-   * Adds to the user the subscription to the message corresponding to the primary key.
-   * @param con The connection to the database.
-   * @param messagePK The primary key of the message.
-   * @param userId The user's id.
-   * @throws SQLException An SQL exception.
-   */
-  public static void subscribeMessage(Connection con, MessagePK messagePK,
-      String userId) throws SQLException {
-    SilverTrace.info("forums", "ForumsDAO.subscribeMessage()",
-        "root.MSG_GEN_PARAM_VALUE", "insertQuery  = "
-        + QUERY_SUBSCRIBE_MESSAGE);
-
-    PreparedStatement insertStmt = null;
-    try {
-      insertStmt = con.prepareStatement(QUERY_SUBSCRIBE_MESSAGE);
-      insertStmt.setString(1, userId);
-      insertStmt.setString(2, messagePK.getId());
-      insertStmt.executeUpdate();
-    } finally {
-      DBUtil.close(insertStmt);
-    }
-  }
-  private static final String QUERY_UNSUBSCRIBE_MESSAGE = "DELETE FROM "
-      + SUBSCRIPTION_TABLE + " WHERE " + SUBSCRIPTION_COLUMN_USER_ID + " = ?"
-      + " AND " + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?";
-
-  /**
-   * Removes from the user the subscription to the message corresponding to the primary key.
-   * @param con The connection to the database.
-   * @param messagePK The primary key of the message.
-   * @param userId The user's id.
-   * @throws SQLException An SQL exception.
-   */
-  public static void unsubscribeMessage(Connection con, MessagePK messagePK,
-      String userId) throws SQLException {
-    SilverTrace.info("forums", "ForumsDAO.unsubscribeMessage()",
-        "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_UNSUBSCRIBE_MESSAGE);
-
-    PreparedStatement deleteStmt = null;
-    try {
-      deleteStmt = con.prepareStatement(QUERY_UNSUBSCRIBE_MESSAGE);
-      deleteStmt.setString(1, userId);
-      deleteStmt.setString(2, messagePK.getId());
-      deleteStmt.executeUpdate();
-    } finally {
-      DBUtil.close(deleteStmt);
-    }
-  }
-  private static final String QUERY_REMOVE_ALL_SUBSCRIBERS = "DELETE FROM "
-      + SUBSCRIPTION_TABLE + " WHERE " + SUBSCRIPTION_COLUMN_MESSAGE_ID
-      + " = ?";
-
-  /**
-   * Removes from all users the subscription to the message corresponding to the primary key.
-   * @param con The connection to the database.
-   * @param messagePK The primary key of the message.
-   * @throws SQLException An SQL exception.
-   */
-  public static void removeAllSubscribers(Connection con, MessagePK messagePK)
-      throws SQLException {
-    SilverTrace.info("forums", "ForumsDAO.removeAllSubscribers()",
-        "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_REMOVE_ALL_SUBSCRIBERS);
-
-    PreparedStatement deleteStmt = null;
-    try {
-      deleteStmt = con.prepareStatement(QUERY_REMOVE_ALL_SUBSCRIBERS);
-      deleteStmt.setString(1, messagePK.getId());
-      deleteStmt.executeUpdate();
-    } finally {
-      DBUtil.close(deleteStmt);
-    }
-  }
-  private static final String QUERY_LIST_ALL_SUBSCRIBERS = "SELECT "
-      + SUBSCRIPTION_COLUMN_USER_ID + " FROM " + SUBSCRIPTION_TABLE + " WHERE "
-      + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?";
-
-  /**
-   * @param con The connection to the database.
-   * @param messagePK The primary key of the message.
-   * @return The list of ids of users who subscribe to the message corresponding to the primary key.
-   * @throws SQLException An SQL exception.
-   */
-  public static Vector<String> listAllSubscribers(Connection con, MessagePK messagePK)
-      throws SQLException {
-    SilverTrace.info("forums", "ForumsDAO.listAllSubscribers()",
-        "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_LIST_ALL_SUBSCRIBERS);
-
-    Vector<String> userIds = new Vector<String>();
-    PreparedStatement selectStmt = null;
-    ResultSet rs = null;
-    try {
-      selectStmt = con.prepareStatement(QUERY_LIST_ALL_SUBSCRIBERS);
-      selectStmt.setString(1, messagePK.getId());
-      rs = selectStmt.executeQuery();
-      while (rs.next()) {
-        userIds.add(rs.getString(SUBSCRIPTION_COLUMN_USER_ID));
-      }
-    } finally {
-      DBUtil.close(rs, selectStmt);
-    }
-    return userIds;
-  }
-  private static final String QUERY_IS_SUBSCRIBER = "SELECT "
-      + SUBSCRIPTION_COLUMN_USER_ID + " FROM " + SUBSCRIPTION_TABLE + " WHERE "
-      + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?" + " AND "
-      + SUBSCRIPTION_COLUMN_USER_ID + " = ?";
-
-  /**
-   * @param con The connection to the database.
-   * @param messagePK The primary key of the message.
-   * @param userId The user's id.
-   * @return True if the user has subscribed to the message corresponding to the primary key.
-   * @throws SQLException An SQL exception.
-   */
-  public static boolean isSubscriber(Connection con, MessagePK messagePK,
-      String userId) throws SQLException {
-    SilverTrace.info("forums", "ForumsDAO.isSubscriber()",
-        "root.MSG_GEN_PARAM_VALUE", "selectQuery  = " + QUERY_IS_SUBSCRIBER);
-
-    PreparedStatement selectStmt = null;
-    ResultSet rs = null;
-    try {
-      selectStmt = con.prepareStatement(QUERY_IS_SUBSCRIBER);
-      selectStmt.setString(1, messagePK.getId());
-      selectStmt.setString(2, userId);
-      rs = selectStmt.executeQuery();
-      return (rs.next());
-    } finally {
-      DBUtil.close(rs, selectStmt);
-    }
   }
 
   /**
@@ -1877,7 +1720,7 @@ public class ForumsDAO {
    * @return The forum corresponding to the primary key (ForumDetail).
    * @throws SQLException An SQL exception.
    */
-  private static ForumDetail getForumDetail(Connection con, ForumPK forumPK)
+  public static ForumDetail getForumDetail(Connection con, ForumPK forumPK)
       throws SQLException {
     PreparedStatement stmt = null;
     ResultSet rs = null;
@@ -1990,6 +1833,7 @@ public class ForumsDAO {
 
   /**
    * Adds an access date to the message corresponding to the message id by the user.
+   *
    * @param con The connection to the database.
    * @param userId The user's id.
    * @param messageId The id of the message.
@@ -2024,6 +1868,7 @@ public class ForumsDAO {
 
   /**
    * Deletes the access date of the user to the message corresponding to the message id.
+   *
    * @param con The connection to the database.
    * @param userId The user's id.
    * @param messageId The id of the message.
@@ -2058,10 +1903,8 @@ public class ForumsDAO {
     try {
       creationDate = formatter.parse(rs.getString(FORUM_COLUMN_FORUM_CREATION_DATE));
     } catch (ParseException e) {
-      throw new SQLException(
-          "ForumsDAO : resultSet2ForumDetail() : internal error : "
-          + "creationDate format unknown for forumPK = " + forumPK + " : "
-          + e.toString());
+      throw new SQLException("ForumsDAO : resultSet2ForumDetail() : internal error : "
+          + "creationDate format unknown for forumPK = " + forumPK + " : " + e.toString(), e);
     }
 
     String name = rs.getString(FORUM_COLUMN_FORUM_NAME);
@@ -2091,9 +1934,9 @@ public class ForumsDAO {
    * @return The message corresponding to the primary key (Vector).
    * @throws SQLException An SQL exception.
    */
-  private static Vector resultSet2VectorMessage(ResultSet rs)
+  private static List resultSet2VectorMessage(ResultSet rs)
       throws SQLException {
-    Vector message = new Vector();
+    List message = new ArrayList();
     Timestamp timestamp = rs.getTimestamp(MESSAGE_COLUMN_MESSAGE_DATE);
     Date date = (timestamp != null ? new Date(timestamp.getTime()) : null);
 
